WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70170
[EFL] Some dirty areas are ignored without repainting.
https://bugs.webkit.org/show_bug.cgi?id=70170
Summary
[EFL] Some dirty areas are ignored without repainting.
ChangSeok Oh
Reported
2011-10-14 23:16:53 PDT
Dirty area is not update properly while animation with requestAnimationFrame enabled for EFL port. Visit here
http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html
.
Attachments
Proposed patch
(1.67 KB, patch)
2011-10-27 00:12 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2011-10-27 00:12:19 PDT
Created
attachment 112643
[details]
Proposed patch
Ryuan Choi
Comment 2
2011-10-27 02:29:26 PDT
***
Bug 70900
has been marked as a duplicate of this bug. ***
Ryuan Choi
Comment 3
2011-10-27 02:31:06 PDT
Informal r+ on my side.
Raphael Kubo da Costa (:rakuco)
Comment 4
2011-10-27 06:04:49 PDT
Passing "-b single
http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html
" to EWebLauncher did not show anything weird while rendering the linked page. Can you describe what was supposed to be seen?
ChangSeok Oh
Comment 5
2011-10-27 07:10:37 PDT
(In reply to
comment #4
)
> Passing "-b single
http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html
" to EWebLauncher did not show anything weird while rendering the linked page. Can you describe what was supposed to be seen?
I guess you missed applying a submitted patch for
bug67112
before. This will enable requestAnimationFrame JS API so that you can see 2 clocks and some changing numbers.
KwangHyuk
Comment 6
2011-10-30 18:25:48 PDT
> Passing "-b single
http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html
" to EWebLauncher did not show anything weird while rendering the linked page. Can you describe what was supposed to be seen?
Hi, Kubo, I think that you can notice the reason why this patch is reasonable if you check www.daum.net. Just go to www.daum.net and scroll down 2 times. and then click daum title image on top of the left cornor of website without this patch first. And finally use this patch for the same checking.
KwangHyuk
Comment 7
2011-10-30 18:26:07 PDT
LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 8
2011-10-31 06:13:34 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Passing "-b single
http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html
" to EWebLauncher did not show anything weird while rendering the linked page. Can you describe what was supposed to be seen? > > I guess you missed applying a submitted patch for
bug67112
before. This will enable requestAnimationFrame JS API so that you can see 2 clocks and some changing numbers.
Oops, thanks for the pointer. From what I see, the patch makes callback counters actually work, right?
Raphael Kubo da Costa (:rakuco)
Comment 9
2011-10-31 06:14:16 PDT
(In reply to
comment #8
)
> Oops, thanks for the pointer. From what I see, the patch makes callback counters actually work, right?
BTW, if that's the issue, doesn't it need to be fixed in the tiled backing store too?
KwangHyuk
Comment 10
2011-10-31 06:31:30 PDT
(In reply to
comment #9
)
> (In reply to
comment #8
) > > Oops, thanks for the pointer. From what I see, the patch makes callback counters actually work, right? > > BTW, if that's the issue, doesn't it need to be fixed in the tiled backing store too?
You are right. Tiled view also requires it.
Raphael Kubo da Costa (:rakuco)
Comment 11
2011-10-31 06:36:27 PDT
(In reply to
comment #10
)
> (In reply to
comment #9
) > > (In reply to
comment #8
) > > > Oops, thanks for the pointer. From what I see, the patch makes callback counters actually work, right? > > > > BTW, if that's the issue, doesn't it need to be fixed in the tiled backing store too? > > You are right. > Tiled view also requires it.
OK, so if this is the issue that this patch fixes, you have my informal r+, even though it'd be better to fix both backing stores in a single patch.
Eric Seidel (no email)
Comment 12
2011-11-01 23:12:33 PDT
Comment on
attachment 112643
[details]
Proposed patch rubber-stamp. This really should be tested, but I don't think EFL has DumpREnderTree yet... Does it? If so, we could use repaint tests.
WebKit Review Bot
Comment 13
2011-11-02 00:21:43 PDT
Comment on
attachment 112643
[details]
Proposed patch Clearing flags on attachment: 112643 Committed
r99041
: <
http://trac.webkit.org/changeset/99041
>
WebKit Review Bot
Comment 14
2011-11-02 00:21:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug