[EFL] Dirty area is not updated with requestAnimationFrame. https://bugs.webkit.org/show_bug.cgi?id=70170

Some additional dirty areas caused by re-layout have ignored
since updateLayoutAndSytleIfNeedeRecursive is called after gathering dirty area to repaint.
So ewk_view_layout_if_needed_recursive is relocated before getting dirty areas.

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2011-11-02
Reviewed by Eric Seidel.

* ewk/ewk_view_single.cpp:
(_ewk_view_single_smart_repaints_process):

git-svn-id: svn://svn.chromium.org/blink/trunk@99041 bbb929c8-8fbe-4397-9dbb-9b2b20218538